// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCard > renders correctly with all directions > renders correctly direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <img
          alt=""
          class="styles_column__uy9lkpd styles__uy9lkpc"
          height="120"
          src="/src/compositions/ContentCard/assets/illustration.png"
          style="--uy9lkp0: none;"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="styles_column__uy9lkph styles__uy9lkpg styles__vd0uwv1"
          style="--uy9lkp1: 120px; --uy9lkp2: 100%;"
        >
          <div
            class="stylesVariants__1niawa2k"
          />
          <div
            class="styles__vd0uwv2"
          />
        </div>
        <div
          class="styles__uy9lkpj styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      >
        <img
          alt=""
          class="styles_row__uy9lkpe styles__uy9lkpc"
          src="/src/compositions/ContentCard/assets/illustration.png"
          style="--uy9lkp0: none;"
          width="220"
        />
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="styles_row__uy9lkpi styles__uy9lkpg styles__vd0uwv1"
          style="--uy9lkp1: unset; --uy9lkp2: 220px;"
        >
          <div
            class="stylesVariants__1niawa2k"
          />
          <div
            class="styles__vd0uwv2"
          />
        </div>
        <div
          class="styles__uy9lkpj styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2d"
              style="--_1niawa21: 7.5rem;"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
              >
                This is the children of the component
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      disabled=""
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_28__1yhcak822"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with empty string title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_column__uy9lkp9 styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_column__uy9lkp6 styles__mxir930 styles_alignItems_flex-end_xxsmall__mxir9311 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
            style="--_1o893js3: 1;"
          >
            <div
              class="styles__uy9lkp5"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_row__uy9lkpb styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_row__uy9lkp7 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_flex-end_xxsmall__mxir936p"
            style="--_1o893js3: 1;"
          >
            <div
              class="styles__uy9lkp5"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and target 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_column__uy9lkp9 styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_column__uy9lkp6 styles__mxir930 styles_alignItems_flex-end_xxsmall__mxir9311 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
            style="--_1o893js3: 1;"
          >
            <div
              class="styles__uy9lkp5"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <img
          alt=""
          class="styles_column__uy9lkpd styles__uy9lkpc"
          height="120"
          src="/src/compositions/ContentCard/assets/illustration.png"
          style="--uy9lkp0: none;"
        />
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            /src/compositions/ContentCard/assets/illustration.png
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <small
                    class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  >
                    sub title test
                  </small>
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
                <p
                  class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                >
                  this is a description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with onClick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      role="button"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with required title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h3
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with title with custom tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          style="--_1o893js3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
            style="--_1o893js3: 1 1 auto;"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
              style="--_1o893js3: 1 1 auto;"
            >
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <h1
                    class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  >
                    test
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
